Fix toggle button position on mobile screen

--- a/styles.css
+++ b/styles.css
@@ -81,7 +81,7 @@ nav {
 
 .toggle-button {
   position: absolute;
-  top: .6rem;
+  top: .8rem;
   right: 1rem;
   display: none;
   z-index: 5000;
@@ -99,7 +99,7 @@ nav {
   cursor: pointer;
 }
 
-@media (max-width: 500px) {
+@media (max-width: 800px) {
   .toggle-button {
     display: flex;
   }
